--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,41 @@
-<p>home works!</p>
+<div class="d-grid grid-cols-2 grid-rows-2 gap-1 m-2">
+  <mat-card>
+    <mat-card-header>Our Stores world wide</mat-card-header>
+    <mat-card-content>
+      Apex Chart graph here
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card>
+    <mat-card-header>Total movies per category</mat-card-header>
+    <mat-card-content *ngIf="totalMoviesByCategory$ | async as total">
+      <apx-chart
+        [series]="total.series"
+        [chart]="options.chart"
+        [plotOptions]="options.plotOptions"
+        [dataLabels]="options.dataLabels"
+        [xaxis]="total.xaxis"
+      >
+      </apx-chart>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card>
+    <mat-card-header>Total customers per country/store</mat-card-header>
+    <mat-card-content>
+      Apex Chart graph here
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card>
+    <mat-card-header>TOP 3 RENTED MOVIES</mat-card-header>
+    <apx-chart *ngIf="top3RentedMovies$ | async as topRented"
+      [series]="topRented.series"
+      [chart]="options.chart"
+      [plotOptions]="options.plotOptions"
+      [dataLabels]="options.dataLabels"
+      [xaxis]="topRented.xaxis"
+    >
+    </apx-chart>
+  </mat-card>
+</div>
