--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -5,6 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
+      <a mat-list-item routerLink="">Home</a>
       <a mat-list-item routerLink="stores">Store Finder</a>
       <a mat-list-item routerLink="movies">Movies</a>
       <a mat-list-item routerLink="actors">Actors</a>
