--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -9,7 +9,7 @@
       <a mat-list-item routerLink="stores">Store Finder</a>
       <a mat-list-item routerLink="movies">Movies</a>
       <a mat-list-item routerLink="actors">Actors</a>
-      <a mat-list-item routerLink="admin-staff">Admin</a>
+      <a mat-list-item routerLink="admin">Admin</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
