--- a/src/app/modules/admin/customer-panel/customer-panel.component.html
+++ b/src/app/modules/admin/customer-panel/customer-panel.component.html
@@ -1,21 +1,40 @@
 <div class="d-grid grid-cols-2">
   <div>
+    <div>Filters</div>
     <div>
-      Filters
-    </div>
-    <div>
-      <div>
-        Customers list
-      </div>
+      <div>Customers list</div>
+      <mat-list *ngFor="let customer of customers$ | async">
+        <mat-list-item *ngIf="customer">
+          <div
+            style="
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              margin-right: 2rem;
+            "
+          >
+            <span>
+              {{ customer.firstName }}
+              {{ customer.lastName }}
+            </span>
+            <span>
+              <button
+                mat-icon-button
+                (click)="editHandler(customer.customerId)"
+              >
+                <mat-icon>edit</mat-icon>
+              </button>
+            </span>
+          </div>
+        </mat-list-item>
+      </mat-list>
     </div>
   </div>
 
   <div>
     <h2>Create Customer</h2>
     <div>
-      <form>
       <app-create-customer-form></app-create-customer-form>
-      </form>
     </div>
   </div>
 </div>
